Atualiza novas funcionalidades no sistema